fixed transparency and scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,25 +290,18 @@ footer {
 
 #liriInfo > p,
 #liriInfo > h1,
-#liriInfo > div {
-    background-color:hsla(0, 0%, 0%, 0.6);
-    color:white;
-}
-
-#liriInfo > div > h3,
-#liriInfo > h1 {
+#liriInfo > div,
+#liriInfo > a {
+    background-color:hsla(0, 0%, 0%, 0.7);
     color:white;
 }
 
 #liriInfo > a {
-    color:white;
-    background-color:hsla(0, 0%, 0%, 0.6);
     margin-left:20vw;
 }
 
 #liriInfo > a:hover{
     background-color:black;
-    color:white;
 }
 
 #scheduler {
@@ -468,7 +461,7 @@ footer {
 }
 
 ::-webkit-scrollbar {
-    width: 1vw;
+    width: 0.75vw;
 }
 
 ::-webkit-scrollbar-track {
